--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -1,11 +1,57 @@
 .header {
   margin-bottom: 1rem;
   padding: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   border-bottom: 0.2rem solid rgba(253, 220, 232, 0.6);
+
+  &_link {
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: #444;
+  }
+
+  &_loginButton {
+    padding: 10px 20px;
+    background: #ec7498;
+    border-radius: 20px;
+    font-size: 14px;
+    color: #fff;
+  }
 }
 
-.header_logo {
-  font-size: 1.8rem;
-  font-weight: 700;
-  color: #444;
+.hamburger {
+  display: inline-block;
+  transition: all 0.4s;
+  box-sizing: border-box;
+  position: relative;
+  width: 50px;
+  height: 44px;
+  background: none;
+  border: none;
+  appearance: none;
+  cursor: pointer;
+
+  &__item {
+    display: inline-block;
+    transition: all 0.4s;
+    box-sizing: border-box;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #fff;
+    border-radius: 4px;
+
+    &:nth-of-type(1) {
+      top: 0;
+    }
+    &:nth-of-type(2) {
+      top: 20px;
+    }
+    &:nth-of-type(3) {
+      bottom: 0;
+    }
+  }
 }
