--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -1,6 +1,6 @@
 .header {
   margin-bottom: 1rem;
-  padding: 1.5rem;
+  padding: 1rem 1.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -21,37 +21,10 @@
   }
 }
 
-.hamburger {
-  display: inline-block;
-  transition: all 0.4s;
-  box-sizing: border-box;
-  position: relative;
-  width: 50px;
-  height: 44px;
-  background: none;
-  border: none;
-  appearance: none;
-  cursor: pointer;
-
-  &__item {
-    display: inline-block;
-    transition: all 0.4s;
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background-color: #fff;
-    border-radius: 4px;
-
-    &:nth-of-type(1) {
-      top: 0;
-    }
-    &:nth-of-type(2) {
-      top: 20px;
-    }
-    &:nth-of-type(3) {
-      bottom: 0;
-    }
+.icon {
+  width: 40px;
+  height: 40px;
+  img {
+    border-radius: 25px;
   }
 }
